<resources>
    <string name="app_name">calculator</string>
    <string name="_0">0</string>
    <string name="sin">SIN</string>
    <string name="cos">COS</string>
    <string name="tan">TAN</string>
    <string name="log">LOG</string>
    <string name="sqrt">√</string>
    <string name="x_2">x^2</string>
    <string name="pi">π</string>
    <string name="e">e</string>
    <string name="mod_x">|X|</string>
    <string name="c">C</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="cross">❌</string>
    <string name="_5">5</string>
    <string name="x">X</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="div">÷</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="lbrcket">(</string>
    <string name="rtbrcket">)</string>
    <string name="fact">!</string>
</resources>